Replace deprecated new URL constructors in modern application tests
Refs #25625

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>